# unity-mmd-loader

./: .gitignore  .gitmodules  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: unity-ci.yml
artifacts/runtime-verification/: compare-physics-oracle.ps1
docs/: HOW_TO_USE.md  MMD_SELF_SHADOW.md  README.ja.md  RELEASE.md
native/bullet/: CMakeLists.txt
native/bullet/src/: mmd_bullet_api.cpp  mmd_bullet_api.h  ymu_bullet_api.cpp  ymu_bullet_api.h
scripts/: build-runtime-verification-player.ps1  run-curated-motion-oracle-gate.ps1  run-local-asset-corpus-inventory.ps1  run-local-asset-fixture-gate.ps1  run-local-playback-release-gate.ps1  run-mmd-anim-cli-parity-report.ps1  run-runtime-verification-gate.ps1  verify-unity-toon-shader-sample.ps1
tools/: new-visual-review.ps1  run-visual-shading-tier.ps1
